--- a/assets/manifest.json
+++ b/assets/manifest.json
@@ -1,14 +1,15 @@
 {
   "name": "Catalog",
   "short_name": "Catalog",
-  "start_url": "/DvdCatalogue/index.html",
+  "start_url": "/index.html",
   "scope": "/DvdCatalogue/",
   "display": "standalone",
   "background_color": "#0f1216",
   "theme_color": "#0f1216",
   "icons": [
-    { "src": "/DvdCatalogue/icons/icon-192.png", "sizes": "192x192", "type": "image/png" },
-    { "src": "/DvdCatalogue/icons/icon-512.png", "sizes": "512x512", "type": "image/png" }
+    { "src": "./assets/icons/icon-192.png", "sizes": "192x192", "type": "image/png" },
+    { "src": "./assets/icons/icon-512.png", "sizes": "512x512", "type": "image/png" }
   ]
 
 }
+
