Modify manifest.json for new directory structure
Updated start_url and scope to reflect new directory structure.

--- a/assets/manifest.json
+++ b/assets/manifest.json
@@ -1,19 +1,20 @@
 {
   "name": "DVD Catalogue",
   "short_name": "Catalogue",
-  "start_url": "/index.html",
-  "scope": "/",
+  "start_url": "/DvdCatalogue/index.html",
+  "scope": "/DvdCatalogue/",
   "display": "standalone",
   "icons": [
     {
-      "src": "/assets/icons/icon-192.png",
+      "src": "/DvdCatalogue/assets/icons/icon-192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/assets/icons/icon-512.png",
+      "src": "/DvdCatalogue/assets/icons/icon-512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
   ]
 }
+
